<resources>
    <string name="app_name">WAppBIU_Android</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="register_suggest">not Registered? Click here to Register!</string>
    <string name="display_name">Display Name</string>
    <string name="login_suggest">Already Registered? Click here to Login</string>
    <string name="register">Register</string>
    <string name="BaseUrl">http://10.0.2.2:5030/api/</string>
    <string name="verification_error">Please enter the same password!</string>


</resources>