<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/green">


    <LinearLayout
        android:background="@color/gray"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/RegisterHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Register"
            android:textSize="48dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:padding="15dp"

            android:hint="@string/login_etUsername"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextRegiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/login_etPassword"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/editTextRegiDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/display_name"
            android:inputType="textPersonName" />
        <TextView
            android:id="@+id/LoginSuggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/login_suggest"
            android:layout_gravity="center"
            android:linksClickable="true"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:backgroundTint="@color/blue"
            android:text="@string/register" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>